Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124115

QtMultimedia configure fails for GPU-less yocto target

    XMLWordPrintable

Details

    • Linux/Yocto
    • 521ffbf7c (dev), 88839ecd9 (6.7), 92a3bf2ff (tqtc/lts-6.5)
    • Multimedia wk 15-16

    Description

      Multimedia configure step fails for HW without GPU (imx93-11x11-lpddr4x-evk)

      Encountered with test build for 6.7, but should affect dev/6.7/6.6/6.5.

      Error:

       

      16:53:53 | ERROR: Feature "gstreamer": Forcing to "ON" breaks its condition:
      16:53:53 |     ( QT_FEATURE_gstreamer_1_0 AND QT_FEATURE_gstreamer_gl AND QT_FEATURE_gstreamer_app )
      16:53:53 | Condition values dump:
      16:53:53 |     QT_FEATURE_gstreamer_1_0 = "ON"
      16:53:53 |     QT_FEATURE_gstreamer_gl = "OFF"
      16:53:53 |     QT_FEATURE_gstreamer_app = "ON"
      16:53:53 | 
      16:53:53 | 
      16:53:53 | CMake Error at /home/qt/work/build/tmp/work/cortexa55-mx93-poky-linux/qtmultimedia/6.7.1/recipe-sysroot/usr/lib/cmake/Qt6/QtBuildInformation.cmake:208 (message):
      16:53:53 |   Check the configuration messages for an error that has occurred.
      16:53:53 | Call Stack (most recent call first):
      16:53:53 |   /home/qt/work/build/tmp/work/cortexa55-mx93-poky-linux/qtmultimedia/6.7.1/recipe-sysroot/usr/lib/cmake/Qt6/QtBuildInformation.cmake:39 (qt_configure_print_summary)
      16:53:53 |   /home/qt/work/build/tmp/work/cortexa55-mx93-poky-linux/qtmultimedia/6.7.1/recipe-sysroot/usr/lib/cmake/Qt6/QtBuildRepoHelpers.cmake:347 (qt_print_feature_summary)
      16:53:53 |   /home/qt/work/build/tmp/work/cortexa55-mx93-poky-linux/qtmultimedia/6.7.1/recipe-sysroot/usr/lib/cmake/Qt6/QtBuildRepoHelpers.cmake:399 (qt_build_repo_end)
      16:53:53 |   CMakeLists.txt:29 (qt_build_repo)
      16:53:53 | 
      16:53:53 | 
      16:53:53 | -- Configuring incomplete, errors occurred!
      16:53:53 | WARNING: exit code 1 from a shell command.
      16:53:53 NOTE: recipe qtmultimedia-6.7.1-r0: task do_configure: Failed
      16:53:53 ERROR: Task (/home/qt/work/sources/meta-qt6/recipes-qt/qt6/qtmultimedia_git.bb:do_configure) failed with exit code '1'

       

      Likely caused by Multimedia commit: "CMake: use gstreamer "feature" only when egl/gstreamer_gl are available" https://codereview.qt-project.org/c/qt/qtmultimedia/+/550851.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            timblechmann tim blechmann
            gronoff Mikko Gronoff
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes