CMake: don't disable gstreamer if gstreamer_gl is not available

It was a wrong assumption that `QGstVideoBuffer` requires gl, but it
seems that `QGstVideoBuffer::map` is used as fallback in that case.

Fixes: QTBUG-124115
Pick-to: 6.6 6.5
Change-Id: I1c5af8ed9fd0c71cde288e2cc10869767ae895c6
Reviewed-by: Mikko Gronoff <mikko.gronoff@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 521ffbf7c92e5259413f678abf3079a3fd61e663)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>